# RottenBeans

./: .gitignore  LICENSE  README.md  makefile
backend/: .env  Cargo.toml  diesel.toml
backend/migrations/2025-04-14-062944_create_users/: up.sql
backend/migrations/2025-04-15-083333_create_books/: down.sql  up.sql
backend/src/: auth.rs  lib.rs  main.rs  schema.rs
backend/src/db/: book.rs  finance.rs  mod.rs  purchase.rs  user.rs  utils.rs
backend/src/handlers/: book.rs  finance.rs  mod.rs  purchase.rs  user.rs
backend/src/models/: book.rs  finance.rs  mod.rs  purchase.rs  user.rs
book_scraper/: pyproject.toml
book_scraper/book_scraper/: douban_book.json  main.py
doc/: doc.md  实验报告.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  RequireAuth.tsx  api.ts
frontend/src/components/: Book.tsx  Dashboard.css  Dashboard.tsx  Finance.tsx  HomePage.tsx  Order.tsx  OrderList.tsx  People.tsx  SignIn.css  SignIn.tsx
