[package]
name = "backend"
version = "0.1.0"
edition = "2024"
default-run = "backend"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "numeric", "uuid", "chrono", "r2d2"] }
dotenvy = "0.15"
md5 = "0.7"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bigdecimal = { version = "0.4", features = ["serde-json"] }
actix-web = "4"
jsonwebtoken = "9"
futures-util = "0.3"




[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
    "serde",
]
